[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "ciphertoken"
version = "0.1.8"
description = "High-performance token and crypto utilities written in Rust with PyO3"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Cipher-Unit" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[tool.maturin]
bindings = "pyo3"
strip = true

[project.optional-dependencies]
test = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["ciphertoken"]

[tool.setuptools.package-data]
ciphertoken = ["py.typed", "*.pyi"]